refactor: remove selecedDay and refactor getTodayStudentsScore sql (#25)
